Added the bus-search component - now using angular

--- a/TheFactory/ClientApp/src/app/app.component.html
+++ b/TheFactory/ClientApp/src/app/app.component.html
@@ -1,7 +1,2 @@
-<body>
-  <app-nav-menu></app-nav-menu>
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
-</body>
+<app-bus-search></app-bus-search>
 
