updating previous commit

--- a/TheFactory/ClientApp/src/app/bus-search/bus-search.component.html
+++ b/TheFactory/ClientApp/src/app/bus-search/bus-search.component.html
@@ -7,7 +7,7 @@
   <h1>HambaOnline</h1>
   <p>Book buses quickly and easily across Southern Africa</p>
 </header>
-<section class="search-section">
+<section class="search-section">l,
   <h2>Find Your Bus</h2>
   <form>
     <div style="position:relative;">
